//
//  ReminderType.swift
//  HW_2.3
//
//  Created by Павел Калинин on 16.06.2025.
//


enum ReminderType: String, CaseIterable {
    case water = "Пить воду"
    case stretch = "Сделать разминку"
    case vitamins = "Витамины"
    case sleep = "Лечь спать"
    case exercise = "Зарядка"
    case meal = "Приём пищи"
    case breathing = "Дыхательные упражнения"
    case other = "Другое"
}
